Source/JavaScriptCore/runtime/WeakGCMap.h
@@ -26,8 +26,8 @@
 #ifndef WeakGCMap_h
 #define WeakGCMap_h
 
-#include <heap/Weak.h>
-#include <heap/WeakInlines.h>
+#include "Weak.h"
+#include "WeakInlines.h"
 #include <wtf/HashMap.h>
 
 namespace JSC {
